# crispr

./: .editorconfig  .gitignore  Makefile  README.md  command.py  job_dispaly.py  pyproject.toml  quisp_run.py  result.py  sim_context.py  simulation.plan  worker.py
benchmarks/: package.ned  topology_benchmark_network.ned
config/: omnetpp.ini
config/topology/: package.ned
crispr/: __main__.py  constants.py  main.py  run.py  state.py  utils.py  utils_test.py
crispr/commands/: __init__.py  init.py  plan.py  resume.py  run.py  status.py
crispr/config/: parser.py  parser_test.py
crispr/parameter_registry/: parameter.py  registry.py  registry_test.py  schema.py  schema_test.py
crispr/simulation/: context.py  plan.py  plan_test.py  result.py  setting.py
crispr/workers/: __init__.py  executor.py  job_dispaly.py  writer.py
quisp_run/: __init__.py  __main__.py  cmd.py  config_parser.py  config_parser_test.py  constants.py  job_dispaly.py  main.py  path_convert.py  quisp_run.py  result.py  run.py  sim_context.py  sim_plan.py  sim_plan_test.py  sim_setting.py  state.py  utils.py  worker.py  writer.py
quisp_run/commands/: __init__.py  parse.py  plan.py  resume.py  run.py  status.py
quisp_run/config/: __init__.py  parser.py  parser_test.py
quisp_run/parameter_registry/: __init__.py  parameter.py  parameter_test.py  registry.py  registry_test.py
quisp_run/simulation/: __init__.py  context.py  plan.py  plan_test.py  result.py  result_test.py  setting.py
quisp_run/workers/: executor.py  job_dispaly.py  writer.py
templates/: analysis.ipynb  analysis_utils.py  analysis_utils_test.py  omnetpp.ini  parameters.toml
templates/topology/: base_network.ned
