[tool.poetry]
name = "quisp_run"
version = "0.1.0"
description = ""
authors = ["zigen <hrlclb@gmail.com>"]
include = ["quisp_run", "benchmarks"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
rich = "^10.16.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quisp_run = "quisp_run.quisp_run:run_cmd"

