[tool.poetry]
name = "quisp_run"
version = "0.1.0"
description = ""
authors = ["zigen <hrlclb@gmail.com>"]
include = ["templates"]
packages = [ {include = "quisp_run"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
rich = "^10.16.1"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
# https://github.com/python-poetry/poetry/issues/34#issuecomment-997519115
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
quisp_run = "quisp_run.main:main"

[tool.poetry.build]
generate-setup-file = false

[tool.black]
line-length = 100
